@@ -13,8 +13,8 @@ class QPainterPath;
 class QPolygonF;
 class QPen;
 
-void buildPathFromRoad(Road *R, Projection const &theProjection, QPainterPath &Path);
-void buildPathFromRelation(Relation *R, Projection const &theProjection, QPainterPath &Path);
+//void buildPathFromRoad(Road *R, Projection const &theProjection, QPainterPath &Path, const QRect& clipRect);
+void buildPathFromRelation(Relation *R, QPainterPath &Path);
 void buildPolygonFromRoad(Road *R, Projection const &theProjection, QPolygonF &Polygon);
 
 /// draws way with oneway markers
