@@ -1,4 +1,5 @@
 v0.12
+	* FIX : another try at solving the "long-ways-at-high-zoom-makes-Merkaartor-unusable" problem (closes #1110)
 	* ADD : names rendering in styles
 	* ADD : save last download layer to MDCs
 	* ADD : switch to integer internal coordinates. Coordinates now vary from -INT_MAX to +INT_MAX rather than -M_PI / +M_PI
